scripts/cloudformation/ec2Instance.yml
#usage :
# aws cloudformation create-stack
# --stack-name simpleEc24j --template-body file://C:\path_to_parent\ec2Instance.yml
# --parameters ParameterKey=KeyName,ParameterValue=${encryptionKeyName}
---
Parameters:
  SecurityGroupDescription:
    Description: Security Group Description
    Type: String
    Default: instance security group
  KeyName:
    Description: Security Group Description
    Type: String

Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: ami-0a3c3a20c09d6f377
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Name
          Value: simpleInstance4J
        - Key: env
          Value: transcribe.dev
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref ServerSecurityGroup
      UserData: !Base64
        "Fn::Join": [ "\n", [ "#!/bin/bash -xe",
                              "sudo yum install java-17-amazon-corretto -y",
                              "echo java installed!",
                              "wget http://mirror.olnevhost.net/pub/apache/maven/maven-3/3.9.9/binaries/apache-maven-3.9.9-bin.tar.gz",
                              "tar xvf apache-maven-3.9.9-bin.tar.gz",
                              "sudo mkdir /usr/local/apache-maven",
                              "sudo mv apache-maven-3.9.9 /usr/local/apache-maven/",
                              "rm apache-maven-3.9.9-bin.tar.gz",
                              "## globaliser la commande $mvn",
                              "sudo ln -sf /usr/local/apache-maven/apache-maven-3.9.9/bin/mvn /usr/bin/mvn",
                              "echo maven installed!",
                              "sudo yum update",
                              "sudo yum install ruby -y",
                              "wget https://aws-codedeploy-eu-west-3.s3.eu-west-3.amazonaws.com/latest/install",
                              "chmod +x ./install",
                              "sudo ./install auto",
                              "sudo service codedeploy-agent status"],
        ]

  # our EC2 security group
  #              fixme: vulnérabilité (0.0.0.0/0)
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22

  # our second EC2 security group
  #              fixme: vulnérabilité (0.0.0.0/0)
  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Ref SecurityGroupDescription
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 192.168.1.1/32
        - IpProtocol: tcp  # Open to all IPs, adjust as needed for security
          FromPort: 8080
          CidrIp: 0.0.0.0/0
          ToPort: 8080
